crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__func_missing_arrow.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Func(&Func::Arrow(1, 9), 1, 9), \"value = \")"
---
UNFINISHED ANONYMOUS FUNCTION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing an anonymous function, but I got stuck here:

I was expecting to see an arrow next. The syntax for anonymous functions is
\name -> name.
