crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__func_reserved_arg.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = \\if -> 1"
---
nash::syntax

  × Expected `->` after the arguments.
   ╭─[src/Main.nash:1:10]
 1 │ value = \if -> 1
   ·          ─
   ╰────
  help: Separate the argument patterns and function body with `->`.
