crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__if_else_branch_start.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::If(&If::ElseBranchStart(1, 9), 1, 9), \"value = \")"
---
UNFINISHED IF
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was expecting to see more of this `if` expression, but I got stuck here:

I was expecting to see an expression next. Maybe the `else` branch is not filled
in yet?
