crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__if_indent_else.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::If(&If::IndentElse(1, 9), 1, 9), \"value = \")"
---
MISSING ELSE
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected an else branch.

Add `else` and an expression; every if expression needs both branches.
