crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__if_indent_then.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::If(&If::IndentThen(1, 9), 1, 9), \"value = \")"
---
MISSING THEN
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `then` after the condition.

Add `then` before the first branch.
