crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__if_indent_then_branch.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = if True then\n1 else 0"
---
nash::syntax

  × Expected an expression after `then`.
   ╭─[src/Main.nash:2:1]
 1 │ value = if True then
 2 │ 1 else 0
   · ─
   ╰────
  help: Add the first branch, indented inside the if expression.
