crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__if_misindented_else.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = if True then 1\nelse 2"
---
nash::syntax

  × The else branch is not indented enough.
   ╭─[src/Main.nash:2:1]
 1 │ value = if True then 1
 2 │ else 2
   · ────
   ╰────
  help: Indent `else` to continue this if expression.
