crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__if_missing_then.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = if True "
---
nash::syntax

  × Expected `then` after the condition.
   ╭─[src/Main.nash:1:17]
 1 │ value = if True 
   ·                 ─
   ╰────
  help: Add `then` before the first branch.
