crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__let_def_alignment.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = let\n    x = 1\n  y = 2\n    in x"
---
nash::syntax

  × Let definitions must align.
   ╭─[src/Main.nash:3:3]
 1 │ value = let
 2 │     x = 1
 3 │   y = 2
   ·   ─
 4 │     in x
   ╰────
  help: Indent this definition with 4 spaces.
